# qt-android-cmake

./: CMakeLists.txt  README.md  build.cmd  minimal_map.pro
android/: AddQtAndroidApk.cmake  AndroidManifest.xml.in  CMakeLists.txt
src/: CMakeLists.txt
